Added the list of items

--- a/Hello.html
+++ b/Hello.html
@@ -6,5 +6,10 @@
 <body>
 	<h1>Hello there.</h1>
 	<h2>THis is how you make apple pie recipe</h2>
+	<ul>
+		<li>Sugar</li>
+        <li>Apple</li>	
+
+	</ul>
 </body>
 </html>
